Fix compact tabs header icon gap

--- a/[ui] Compact Sidebar Header.css
+++ b/[ui] Compact Sidebar Header.css
@@ -5,7 +5,7 @@
 */
 
 .workspace-tab-header-container-inner {
-    gap:1px !important
+    /* gap:1px !important */
 }
 
 .workspace-tab-header-inner{
